@@ -101,7 +101,7 @@ body {font-family: Arial;}
   <div class="alert alert-warning" role="alert">
   NOTICE: This is a prototype web app that is under active development. Expect changes to occur. You may encounter bugs. Send issues and suggestions to gordon dot cooke at westpoint dot edu.
   </div>
-  <div class="alert alert-info alert-dismissible" role="alert"> Update v0.4.2: Improved layouts. New FOs aware of target hits when joining after start. Alerts if connection lost and improved attempts to reconnect. Bug fix on compass bearing. Bug fix on mobile layout.
+  <div class="alert alert-info alert-dismissible" role="alert"> Update v0.5.0: Improved layouts. Log shows TLE. New FOs aware of target hits when joining after start. Alerts if connection lost and improved attempts to reconnect. Bug fix on compass bearing. Bug fix on mobile layout.
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
